--- a/css/custom.css
+++ b/css/custom.css
@@ -37,12 +37,18 @@ ul.nav, .jumbotron h1
 }
 
 iframe {
-	 /*width:45%; 
-	 height: 380px;*/
+	 width: 100%;
+	 height: 100%;
 }
 .flex-container{
 	display: flex;
 }
+.flex-container > div{
+	width: 50%;
+	height: auto;
+	margin: 2%;
+}
+
 .btn-lg 
 {
 	font-size: 36px;
@@ -118,10 +124,6 @@ ul.nav
  		font-size: 56px;
  		margin-bottom: 30px;
  	}
-	 iframe {
-	 width:45%; 
-	 height: 240px;
-	}
 }
 
 @media (max-width:991px) {
@@ -135,10 +137,6 @@ ul.nav
  		padding-top: 20px;
  		padding-bottom: 20px;
  	}
-	 iframe {
-	 width:45%; 
-	 height: 180px;
-	}
 }
 
 @media (max-width:767px) {
